[gd_scene load_steps=10 format=3 uid="uid://dlbbyuregrt5s"]

[ext_resource type="Script" path="res://bullet_test/Joakim.gd" id="1_1goa0"]
[ext_resource type="Texture2D" uid="uid://43tek07dr3l7" path="res://icon.svg" id="2_7aphf"]
[ext_resource type="Texture2D" uid="uid://c5bh7he0vu5a4" path="res://texture_test/playersheet.png" id="3_u4767"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_058jo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cy8p6"]
radius = 14.6667

[sub_resource type="AtlasTexture" id="AtlasTexture_nfosu"]
atlas = ExtResource("3_u4767")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pxrj"]
atlas = ExtResource("3_u4767")
region = Rect2(0, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_if4rm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfosu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pxrj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_30i3k"]
radius = 18.6934

[node name="Joakim" type="CharacterBody2D" groups=["player"]]
position = Vector2(548, 298)
scale = Vector2(3, 3)
script = ExtResource("1_1goa0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_058jo")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.0625004, -0.0624999)
scale = Vector2(0.157227, 0.157227)
texture = ExtResource("2_7aphf")

[node name="startSearchForBulletsTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.2

[node name="GunPos" type="Node2D" parent="."]
position = Vector2(20.3333, -0.666664)
rotation = -1.5708

[node name="Icon" type="Sprite2D" parent="GunPos"]
position = Vector2(-0.27832, -6.61646)
scale = Vector2(0.0183112, 0.0578139)
texture = ExtResource("2_7aphf")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_cy8p6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_if4rm")

[node name="WallBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBox"]
shape = SubResource("CircleShape2D_30i3k")

[node name="NewDirection" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="startSearchForBulletsTimer" to="." method="_on_start_search_for_bullets_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="WallBox" to="." method="_on_wall_box_area_entered"]
[connection signal="body_entered" from="WallBox" to="." method="_on_wall_box_body_entered"]
[connection signal="timeout" from="NewDirection" to="." method="_on_new_direction_timeout"]
